--- a/configure.ac
+++ b/configure.ac
@@ -3,7 +3,7 @@ m4_pattern_forbid([^AX_])
 m4_pattern_forbid([^URBI_])
 
 AC_PREREQ([2.60])
-AC_INIT([Urbi Kernel], [2.0], [kernel-bugs@lists.gostai.com], [kernel])
+AC_INIT([Urbi Kernel], [2.0-beta], [kernel-bugs@lists.gostai.com], [kernel])
 URBI_KERNEL_VERSION
 URBI_PACKAGE_COPYRIGHT([Gostai SAS], [2005-2008])
 
