--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -87,10 +87,12 @@ ast_dump_LDFLAGS = $(BOOST_REGEX_LDFLAGS)
 ast_dump_LDADD   = $(BOOST_REGEX_LIBS) libuobject.la $(libuobject_la_LIBADD)
 endif !WIN32
 
-install-data-hook: install_param_mk
-
-install_param_mk:
-	sed -e 's/remote/engine/g' $(top_builddir)/sdk-remote/sdk/param.mk >$(envdir)/param.mk
+# FIXME: find something else, if "remote" is in some PATH substituted in param.mk
+# then we are doomed.
+install-data-local:
+	$(MKDIR_P) $(DESTDIR)$(envdir)
+	$(SED) -e 's/remote/engine/g' $(top_builddir)/sdk-remote/sdk/param.mk > \
+	  $(DESTDIR)$(envdir)/param.mk
 
 if ! INSTALL_KERNEL_HEADERS
 install-data-hook: remove_kheaders
