--- a/scripts/package.in
+++ b/scripts/package.in
@@ -16,19 +16,20 @@ COMP="$8"
 
 # If some of those need to be chosen by configure, add an entry
 # there and add the "@" form.
-CP="cp"
-FIND="find"
-GIT="git"
+CP=cp
+FIND=find
+GIT=git
 MKDIR_P="@MKDIR_P@"
+MV=mv
 RM="rm -f"
 SED="@SED@"
-TAR="tar"
+TAR=tar
 
 TMPDIR=${TMPDIR-/tmp}
 
 # Determine the version from the exact tag if there is any, or the
 # sha-1 otherwise
-version=$(cd "$srcdir" && $GIT describe --exact-match 2> /dev/null || $GIT describe --always)
+version=$(cd "$srcdir" && $GIT describe --exact-match 2> /dev/null || $GIT rev-parse --short HEAD)
 name="${PROJECT}-${ARCH}-${OS}-${COMP}-${version}"
 destdir="${updir}/${name}"
 
@@ -42,7 +43,7 @@ $MKDIR_P "$destdir"
 # destination
 MANIFEST="$TMPDIR/MANIFEST.tmp.$$"
 (cd "$destdir" && $FIND . -type f -print | $SED -e "s,^./,,") > "$MANIFEST"
-mv "$MANIFEST" "$destdir/MANIFEST"
+$MV "$MANIFEST" "$destdir/MANIFEST"
 
 # Copy the instructions on how to report bugs at the top-level
-cp "${srcdir}/doc/REPORTING-BUGS" "$destdir"
+$CP "${srcdir}/doc/REPORTING-BUGS" "$destdir"
