Use the static version of BOOST_FILESYSTEM.
Only the "urbi-launch" binary is using it.

	* configure.ac: Use the static version of BOOST_FILESYSTEM.

--- a/sdk-remote/configure.ac
+++ b/sdk-remote/configure.ac
@@ -41,7 +41,7 @@ URBI_LIBPORT
 AC_CONFIG_FILES([lib/libport/Makefile])
 
 BOOST_REQUIRE([1.34])
-BOOST_FILESYSTEM
+BOOST_FILESYSTEM([s])
 
 URBI_WITH_LTDL
 
