Remove BOOST_FILESYSTEM and BOOST_SYSTEM references.
	* configure.ac, src/Makefile.am: We do not use BOOST_FILESYSTEM
	and BOOST_SYSTEM anymore.

--- a/sdk-remote/configure.ac
+++ b/sdk-remote/configure.ac
@@ -36,7 +36,7 @@ URBI_DOC
 URBI_COMPILATION_MODE
 
 # URBI_LIBPORT AC_REQUIREs URBI_PTHREAD, so run the latter first.
-URBI_PTHREAD
+#URBI_PTHREAD
 URBI_LIBPORT
 AC_CONFIG_FILES([lib/libport/Makefile])
 
