Add ".txt" extension to shipped text files.
	* doc/QUICK-START, doc/REPORTING-BUGS: Rename into...
	* doc/QUICK-START.txt, doc/REPORTING-BUGS.txt: ...this.
	* scripts/package.in: Take renaming into account.

--- a/scripts/package.in
+++ b/scripts/package.in
@@ -52,5 +52,5 @@ MANIFEST="$TMPDIR/MANIFEST.tmp.$$"
 $MV "$MANIFEST" "$destdir/MANIFEST"
 
 # Copy the instructions at the top-level
-$CP "${srcdir}/doc/REPORTING-BUGS" "$destdir"
-$CP "${srcdir}/doc/QUICK-START" "$destdir"
+$CP "${srcdir}/doc/REPORTING-BUGS.txt" "$destdir"
+$CP "${srcdir}/doc/QUICK-START.txt" "$destdir"
