--- a/scripts/package.in
+++ b/scripts/package.in
@@ -59,5 +59,5 @@ $CP "${srcdir}/doc/QUICK-START.txt" "$packagedir"
 
 # On Windows, copy the .bat file
 if [ $OS = windows ]; then
-  $CP "${srcdir}/doc/urbi-console.bat" "$packagedir"
+  $CP "${srcdir}/scripts/urbi-console.bat" "$packagedir"
 fi
