Check for sockets library.
	* configure.ac: Check for sockets library.

--- a/sdk-remote/configure.ac
+++ b/sdk-remote/configure.ac
@@ -37,6 +37,7 @@ URBI_COMPILATION_MODE
 
 # URBI_LIBPORT AC_REQUIREs URBI_PTHREAD, so run the latter first.
 #URBI_PTHREAD
+URBI_SOCKETS
 URBI_LIBPORT
 AC_CONFIG_FILES([lib/libport/Makefile])
 
