--- a/src/ast/ast.yml
+++ b/src/ast/ast.yml
@@ -708,7 +708,7 @@ String:
   printer:
     - "'\"'"
 # FIXME: It really stinks not to be able to use $value here.
-    - libport::escape(n->value_get())
+    - libport::escape(n->value_get(), '"')
     - "'\"'"
 
 List:
