Use latest component of tag name while building version.
We should have clearer package names now, which can be sorted by
commit number since the latest visible tag on a branch.

This will generate names such as

  kernel-2.0-beta1-124-gdeadbeef-linux-x86.tar.gz

which is quite long but also non-ambiguous.

Internal (non-distributed) names will be even longer, and look like:

  kernel-2.0-beta1-127-gdeadbeef-linux-x86-dynamic-debug.tar.gz

but heck, they are internal names after all.

We may want to find a nicer package name later.

	* scripts/package.in: Use tag when generating the package
	name and reorder components.

--- a/scripts/package.in
+++ b/scripts/package.in
@@ -30,14 +30,14 @@ TAR=tar
 
 TMPDIR=${TMPDIR-/tmp}
 
-# Determine the version from the exact tag if there is any, or the
-# sha-1 otherwise
-version=$(cd "$srcdir" && $GIT describe --exact-match 2> /dev/null || $GIT rev-parse --short HEAD)
+# Determine the version from the latest component of the tag. This will
+# ease ordering.
+version=$(cd "$srcdir" && $GIT describe | sed -e "s,^.*/,,")
 # If we are in release mode, do not tell it, the final users won't care
 if [ $MODE = release_dynamic ]; then
-  name="${PROJECT}-${ARCH}-${OS}-${COMP}-${version}"
+  name="${PROJECT}-${version}-${OS}-${ARCH}"
 else
-  name="${PROJECT}-${ARCH}-${OS}-${COMP}-${MODE}-${version}"
+  name="${PROJECT}-${version}-${OS}-${ARCH}-${COMP}-${MODE}"
 fi
 packagedir="${updir}/${name}"
 
