Ship fix-libtool-la.

--- a/sdk-remote/Makefile.am
+++ b/sdk-remote/Makefile.am
@@ -14,6 +14,8 @@ nodist_host_DATA =
 include sdk/local.mk
 include include/local.mk
 
+EXTRA_DIST +=					\
+  build-aux/fix-libtool-la
 
 ## ------- ##
 ## Check.  ##
