sdk/ is now useless.
It is now SDK Remote, and it only, that provides it.  sdk/ was actually
not used at all by the kernel, not even to create its param.mk.

	* Makefile.am, configure.ac, externals/bootstrap.cfg: sdk/ no
	longer exists.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,9 +1,7 @@
 include $(top_srcdir)/build-aux/build-aux.mk
 
-ACLOCAL_AMFLAGS = -I build-aux -I sdk
+ACLOCAL_AMFLAGS = -I build-aux
 
-# Process "." before the sub dirs to make sure sdk/config.h and
-# libport/config.h are propery built.
 SUBDIRS = sdk-remote . src tests doc
 
 # build-aux.
