--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -14,6 +14,7 @@ include Makefile
 # Keep a version of the version used by configure up to date.  Files
 # that need to depend on the version string should rather depend on
 # this file, rather that on configure.
+BUILT_SOURCES += $(top_srcdir)/.version
 EXTRA_DIST += .version
 $(top_srcdir)/.version: configure
 	echo $(VERSION) >$@.tmp && mv $@.tmp $@
@@ -30,5 +31,5 @@ distdir: update-version
 update-version:
 	version=$$(cd $(srcdir) && build-aux/git-version-gen);	\
 	if test x"$$version" != x"$(VERSION)"; then		\
-	  cd $(top_srcdir) && $(AUTOCONF) --force --verbose;	\
+	  cd $(top_srcdir) && $(AUTOCONF) --force;		\
 	fi
