As an experimentation, change VERSION and PACKAGE_VERSION.
This is expected to make problems in config.h, but we should not
let version info go into config.h: too many dependencies, and besides
the same config.h is used by different packages (libport, sdk-remote,
kernel).

	* configure.ac (VERSION, PACKAGE_VERSION): Force a definition for
	the substitution.

--- a/sdk-remote/configure.ac
+++ b/sdk-remote/configure.ac
@@ -162,4 +162,7 @@ AC_CONFIG_FILES([Makefile
 	        src/swig/Makefile
                 src/tests/Makefile
 ])
+# Use something which is more useful for the Makefiles.
+VERSION='$(shell cat $(top_srcdir)/.version)'
+PACKAGE_VERSION='$(VERSION)'
 AC_OUTPUT
