--- a/sdk-remote/Makefile.am
+++ b/sdk-remote/Makefile.am
@@ -23,14 +23,13 @@ EXTRA_DIST +=					\
 
 # check-html, check-clean, check-uob etc.
 check-%:
-	cd src/liburbi/tests && \
-	  $(MAKE) $(AM_MAKEFLAGS) $@
+	$(MAKE) $(AM_MAKEFLAGS) -C src/liburbi/tests $@
 
 # The target run by the buildfarm.
 CHECK_BUILDFARM_FLAGS = -j4 AM_COLOR_TESTS=no VERBOSE=1 INSTRUMENT=1
 check-buildfarm:
-	cd src/liburbi/tests && \
-	  $(MAKE) $(AM_MAKEFLAGS) $(CHECK_BUILDFARM_FLAGS) check-html
+	$(MAKE) $(AM_MAKEFLAGS) -C src/liburbi/tests \
+	  $(CHECK_BUILDFARM_FLAGS) check-html
 
 ## ----- ##
 ## Doc.  ##
