Urbi-launch test wrapper
Used by the kernel.  Will be used eventually here to test SDK-Remote
alone.

	* src/tests/bin/urbi-launch.in: New.
	* configure.ac: Instantiate it.

--- a/sdk-remote/configure.ac
+++ b/sdk-remote/configure.ac
@@ -154,9 +154,11 @@ AC_CONFIG_SUBDIRS([jpeg-6b])
 ## Output.  ##
 ## -------- ##
 
-AC_CONFIG_FILES([Makefile
-                src/Makefile
-	        src/swig/Makefile
-                src/tests/Makefile
+AC_CONFIG_FILES([
+  Makefile
+    src/Makefile
+      src/swig/Makefile
+      src/tests/Makefile
+        src/tests/bin/urbi-launch
 ])
 AC_OUTPUT
